--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100%;
+  height: 100%;
 }
 
 html {
   height: 100%;
+  /* border: 10px solid rgb(156, 54, 54); */
 
 }
 
 #root {
-  min-height: 100%;
+  height: auto;
+  /* border: 10px solid rgb(54, 40, 126); */
 }
 
