home page update

--- a/src/components/Buttons/ButtonDark.module.css
+++ b/src/components/Buttons/ButtonDark.module.css
@@ -1,12 +1,12 @@
 .btn {
 	background: #000000;
-	-webkit-border-radius: 29;
-	-moz-border-radius: 29;
-	border-radius: 29px;
+
+	border-radius: 1.8125rem;
 	font-family: 'Rubik', sans-serif;
 	color: #ffffff;
-	font-size: 1.25rem;
-	padding: 10px;
+	font-size: 1rem;
+	padding: 0.9rem;
+	margin: 0.3rem;
 	text-decoration: none;
   }
   
