--- a/src/components/Buttons/ButtonHollow.module.css
+++ b/src/components/Buttons/ButtonHollow.module.css
@@ -1,18 +1,21 @@
 .btn {
+	background-color: transparent;
 	-webkit-border-radius: 5;
 	-moz-border-radius: 5;
-	border-radius: 29px;
+	border-radius: 1.8125rem;
 	font-family: 'Rubik', sans-serif;
-	color: #000000;
+	color: #ffffff;
 	font-size: 20px;
-	padding: 10px 20px 10px 20px;
-	border: solid #1f628d 1px;
+	font-size: 1rem;
+	padding: 0.9rem;
+	margin: 0.3rem;
+	border: solid #ffffff 1px;
 	text-decoration: none;
 	min-width: max-content;
   }
   
   .btn:hover {
-	opacity: 0.75;
-	
+	border: solid #f0f0f0 1px;
+	color: #f0f0f0;
 	text-decoration: none;
   }
