--- a/src/components/Buttons/ButtonLight.module.css
+++ b/src/components/Buttons/ButtonLight.module.css
@@ -3,11 +3,12 @@
 	
 	-webkit-border-radius: 29;
 	-moz-border-radius: 29;
-	border-radius: 29px;
+	border-radius: 1.8125rem;
 	font-family: 'Rubik', sans-serif;
 	color: #000000;
-	font-size: 1.25rem;
-	padding: 10px;
+	font-size: 1rem;
+	padding: 0.9rem;
+	margin: 0.3rem;
 	text-decoration: none;
   }
   
