--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,12 +1,19 @@
+* {
+	font-family: 'Poppins', sans-serif;
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 12px 12px;
-	/* gap: 16px; */
+	margin-top: 1%;
+	margin-left: 1%;
+	margin-right: 1%;
+	
 
 	/* width: 1416px;
 	height: 1049px; */
+
 }
 
 .segment {
@@ -21,11 +28,13 @@
 	flex-basis: auto;
 	align-items: center;
 	justify-content: space-between;
+	margin: 10px;
 }
 
 .logotext {
 	font-family: Impact,Haettenschweiler,Franklin Gothic Bold,Charcoal,Helvetica Inserat,Bitstream Vera Sans Bold,Arial Black,sans serif; 
 	text-align: left;
+	color: white;
 	font-size: 1.8em;
 	flex-basis: 10%;
 
@@ -37,29 +46,69 @@
 
 
 .section {
+	background-image: url('../../assets/images/bgimage.png');
+	/* gap: 16px; */
+	margin-top:auto;
+	margin-left: auto;
+	margin-right: auto;	
+	border-radius: 20px;
 	display: flex;
 	width: 100%;
+	flex-direction: column;
 }
 
 .actualsection {
+	box-sizing: border-box;
+	
 	display: flex;
 	width: 100%;
 	flex-direction: column;
 	align-items: stretch;
 }
 
-.menubar {
+/* Main component Styles: */
+
+.main {
 	display: flex;
+	width: 100%;
+	flex-direction: row;
+	justify-content: space-around;
 	align-items: center;
-	
 }
 
-.divider {
-	
-	width: 100%;
-	
-	border-top: 3px solid black;
+.mainLeft {
+	display: flex;
+	flex-direction: column;
+	justify-content:center;
+	align-items: stretch;
 }
+
+.mainLeftSecond {
+	line-height:1;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.mainLeftThird {
+	line-height:1;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.mainDown {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: space-around;
+	width: 50%;
+	margin-bottom: 5%;
+}
+
+
 
 /* Footer Component Styles: */
 
