--- a/src/pages/Auth/Patient/LoginPatient.module.css
+++ b/src/pages/Auth/Patient/LoginPatient.module.css
@@ -1,3 +1,7 @@
+:root {
+	--width-fullLeft: 50%;
+}
+
 .logotext {
 	position: absolute;
 	width: 131px;
@@ -36,10 +40,8 @@
 	align-items: center;
 	padding: 0;
 
-	width: 40%;
+	width: var(--width-fullLeft);
 	height: 100%;
-
-	/* Inside auto layout */
 
 	flex: none;
 	order: 0;
@@ -52,13 +54,9 @@
 	justify-content: space-evenly;
 	align-items: center;
 	padding: 0px;
-	gap: 64px;
 
-	width: 406px;
-	height: 42%px;
-
-	/* Inside auto layout */
-
+	width: 45%;
+	height: 42%;
 	flex: none;
 	order: 0;
 	flex-grow: 0;
@@ -67,15 +65,11 @@
 .loginPrompt {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
+	justify-content: space-evenly;
 	padding: 0px;
 	gap: 1rem;
-
-	width: 406px;
-	height: 84px;
-
-	/* Inside auto layout */
+	width: 100%;
+	height: 50%;
 
 	flex: none;
 	order: 0;
@@ -84,17 +78,16 @@
 }
 
 .text1 {
-	font-family: "Poppins";
+
 	font-style: normal;
 	font-weight: 500;
-	font-size: 48px;
+	font-size: 2.5rem;
 	line-height: 100%;
+	text-align: center;
 	/* identical to box height, or 48px */
-
+	margin-top: 2.5rem;
 	color: #051923;
-
-	/* Inside auto layout */
-
+	padding: 10px;
 	flex: none;
 	order: 0;
 	align-self: stretch;
@@ -102,16 +95,14 @@
 }
 
 .text2 {
-	font-family: "Poppins";
 	font-style: normal;
 	font-weight: 300;
-	font-size: 20px;
+	font-size: 1rem;
 	line-height: 100%;
-	/* identical to box height, or 20px */
-
+	width: 100%;
+	text-align: center;
+	margin-bottom: 2rem;
 	color: rgba(5, 25, 35, 0.8);
-
-	/* Inside auto layout */
 
 	flex: none;
 	order: 1;
@@ -127,10 +118,8 @@
 	justify-content: center;
 	padding: 0px;
 
-	width: 406px;
+	width: 100%;
 	height: 148px;
-
-	/* Inside auto layout */
 
 	flex: none;
 	order: 1;
@@ -163,10 +152,7 @@
 	padding: 0px;
 	gap: 16px;
 
-	min-width: max-content;
-	/* height: 96px; */
-
-	/* Inside auto layout */
+	width: 100%;
 
 	flex: none;
 	order: 2;
@@ -180,13 +166,10 @@
 	font-weight: 300;
 	font-size: 20px;
 	line-height: 100%;
-	/* identical to box height, or 20px */
 
 	text-align: center;
 
-	color: #051923;
-
-	/* Inside auto layout */
+	color: #171f5b;
 
 	flex: none;
 	order: 1;
@@ -197,7 +180,7 @@
 .fullRight {
 	/* box-sizing: border-box; */
 	display: flex;
-	width: 55%;
+	width: calc(100% - var(--width-fullLeft));
 	height: 100%;
 	/* background-image: url("../../../assets/images/bgimagehighres.png"); */
 	background: rgb(6, 62, 92);
@@ -213,13 +196,11 @@
 	border-radius: 2rem 0px 0px 2rem;
 	justify-content: center;
 	align-items: center;
-	/* Inside auto layout */
 
 	display: flex;
 	flex: none;
 	order: 1;
 	flex-grow: 0;
-	overflow: hidden;
 }
 
 .banner {
@@ -242,9 +223,160 @@
 	justify-content: center;
 }
 
+.logoImg > img {
+	width: 12rem;
+}
 .logoImg {
 	text-align: center;
 }
 
-@media sceen {
+@media all and (min-width: 768px) and (max-width: 1100px) {
+	.logotext {
+		display: flex;
+		position: relative;
+		width: 95%;
+		z-index: 100;
+		text-align: center;
+	}
+
+	.fullscreenFrame {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.fullRight {
+		width: 100%;
+		border-bottom-left-radius: 0px;
+		border-top-right-radius: 2rem;
+		box-shadow: 0px -62px 39px -10px rgba(0, 0, 0, 0.2);
+	}
+
+	.loginBox {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 0px;
+
+		width: 75%;
+		height: 45%;
+		flex: none;
+		order: 0;
+		flex-grow: 0;
+	}
+
+	.logoImg > img {
+		width: 8rem;
+	}
+}
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+	.logotext {
+		display: flex;
+		position: relative;
+		width: 95%;
+		z-index: 100;
+		text-align: center;
+	}
+
+	.fullscreenFrame {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.fullLeft {
+		width: 66%;
+	}
+
+	.fullRight {
+		width: 100%;
+		border-bottom-left-radius: 0px;
+		border-top-right-radius: 2rem;
+		box-shadow: 0px -62px 39px -10px rgba(0, 0, 0, 0.2);
+	}
+
+	.loginBox {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 0px;
+
+		width: 75%;
+		height: 45%;
+		flex: none;
+		order: 0;
+		flex-grow: 0;
+	}
+	.logoImg > img {
+		width: 8rem;
+	}
+}
+
+@media all and (max-width: 480px) {
+	.logotext {
+		font-size: medium;
+		display: flex;
+		position: relative;
+		width: 50%;
+		z-index: 100;
+		text-align: center;
+	}
+
+	.fullscreenFrame {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.fullLeft {
+		width: 66%;
+	}
+
+	.text1 {
+		font-size: x-large;
+	}
+
+	.fullRight {
+		width: 100%;
+		border-bottom-left-radius: 0px;
+		border-top-right-radius: 2rem;
+		box-shadow: 0px -62px 39px -10px rgba(0, 0, 0, 0.2);
+	}
+
+	.loginBox {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 0px;
+		width: 100%;
+		height: 45%;
+		flex: none;
+		order: 0;
+		flex-grow: 0;
+	}
+
+	.loginPrompt {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		padding: 0px;
+		gap: 1rem;
+		width: 100%;
+		height: 50%;
+		flex: none;
+		order: 0;
+		align-self: stretch;
+		flex-grow: 0;
+	}
+
+	.logoImg > img {
+		width: 8rem;
+	}
 }
