--- a/src/pages/Auth/Admin/LoginAdmin.module.css
+++ b/src/pages/Auth/Admin/LoginAdmin.module.css
@@ -2,6 +2,8 @@
 	--width-fullLeft: 50%;
 }
 
+
+
 .logotext {
 	position: absolute;
 	width: 131px;
@@ -17,11 +19,18 @@
 	flex-basis: 10%;
 	line-height: 120%;
 	/* identical to box height, or 58px */
-
+	z-index: 100;
 	color: #051923;
+	transition: all 2s;
+}
+
+.logotext:hover {
+	scale: 1.03;
 }
 
 .fullscreenFrame {
+	/* background-image: url('../../../assets/images/cool-background.png');
+	background-size: cover; */
 	background-color: #E7ECEF;
 	display: flex;
 	flex-direction: row;
@@ -34,6 +43,8 @@
 	left: 0px;
 	top: 0px;
 }
+
+
 .fullLeft {
 	display: flex;
 	flex-direction: row;
@@ -54,14 +65,24 @@
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	padding: 0px;
-
-	width: 45%;
-	height: 42%;
+	background-color: #E7ECEF;
+	padding: 1.5rem;
+	border-radius: 1.2rem;
+	/* box-shadow: -40px 0px 39px -10px rgba(0, 0, 0, 0.2); */
+	/* width: 45%;
+	height: 42%; */
 	flex: none;
 	order: 0;
 	flex-grow: 0;
+	transition: all .5s;
 }
+
+/* .loginBox:hover{
+	background-color: rgb(179, 179, 179);
+	scale: 1.03;
+	box-shadow: -70px 69px 39px -10px rgba(0, 0, 0, 0.2);
+
+} */
 
 .loginPrompt {
 	display: flex;
@@ -128,6 +149,12 @@
 	flex-grow: 0;
 }
 
+.usernameInputField ,.passwordInputField {
+	border: 0;
+	
+}
+
+
 .formContainer {
 	display: flex;
 	flex-direction: column;
@@ -179,12 +206,12 @@
 }
 
 .fullRight {
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 	display: flex;
 	width: calc(100% - var(--width-fullLeft));
 	height: 100%;
 	/* background-image: url("../../../assets/images/bgimagehighres.png"); */
-	background: rgb(6, 62, 92);
+	background-color: #E7ECEF;
 	background: linear-gradient(90deg, #3796b0 0%, #000851 100%);
 	/* background: linear-gradient(
 		300deg,
@@ -235,8 +262,14 @@
 	.fullscreenFrame{
 		background-color: white;
 	}
+
+	.usernameInputField ,.passwordInputField {
+		border: 1px;
+		
+	}
 	
 }
+
 
 @media all and (min-width: 768px) and (max-width: 1100px) {
 	.logotext {
@@ -362,9 +395,7 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		align-items: center;
-		padding: 0px;
 		width: 100%;
-		height: 45%;
 		flex: none;
 		order: 0;
 		flex-grow: 0;
@@ -388,5 +419,3 @@
 		width: 8rem;
 	}
 }
-
-
