--- a/src/pages/Auth/Patient/LoginPatient.module.css
+++ b/src/pages/Auth/Patient/LoginPatient.module.css
@@ -2,6 +2,8 @@
 	--width-fullLeft: 50%;
 }
 
+
+
 .logotext {
 	position: absolute;
 	width: 131px;
@@ -17,11 +19,18 @@
 	flex-basis: 10%;
 	line-height: 120%;
 	/* identical to box height, or 58px */
-
+	z-index: 100;
 	color: #051923;
+	transition: all 2s;
+}
+
+.logotext:hover {
+	scale: 1.03;
 }
 
 .fullscreenFrame {
+	/* background-image: url('../../../assets/images/cool-background.png');
+	background-size: cover; */
 	background-color: #E7ECEF;
 	display: flex;
 	flex-direction: row;
@@ -34,6 +43,8 @@
 	left: 0px;
 	top: 0px;
 }
+
+
 .fullLeft {
 	display: flex;
 	flex-direction: row;
@@ -54,14 +65,24 @@
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	padding: 0px;
-
-	width: 45%;
-	height: 42%;
+	background-color: #E7ECEF;
+	padding: 1.5rem;
+	border-radius: 1.2rem;
+	/* box-shadow: -40px 0px 39px -10px rgba(0, 0, 0, 0.2); */
+	/* width: 45%;
+	height: 42%; */
 	flex: none;
 	order: 0;
 	flex-grow: 0;
+	transition: all .5s;
 }
+
+/* .loginBox:hover{
+	background-color: rgb(179, 179, 179);
+	scale: 1.03;
+	box-shadow: -70px 69px 39px -10px rgba(0, 0, 0, 0.2);
+
+} */
 
 .loginPrompt {
 	display: flex;
@@ -82,7 +103,7 @@
 
 	font-style: normal;
 	font-weight: 500;
-	font-size: 2.5rem;
+	font-size: 1.8rem;
 	line-height: 100%;
 	text-align: center;
 	/* identical to box height, or 48px */
@@ -113,6 +134,7 @@
 
 .inputFieldFlexBox,
 .inputFieldFlexBox > form {
+	font-size: 1rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -128,6 +150,13 @@
 	flex-grow: 0;
 }
 
+/* .usernameInputField ,.passwordInputField {
+	border: none;
+	border-radius: 100px;
+	
+} */
+
+
 .formContainer {
 	display: flex;
 	flex-direction: column;
@@ -137,10 +166,11 @@
 }
 
 .formContainer > input {
+	border: none;
 	margin-top: 0.6rem;
 	margin-bottom: 0.6rem;
 	padding: 0.2rem;
-	border-radius: 0.6rem;
+	border-radius: 0.4rem;
 	height: 100%;
 	text-align: center;
 }
@@ -162,10 +192,9 @@
 }
 
 .signinFlexBox > text {
-	font-family: "Poppins";
 	font-style: normal;
 	font-weight: 300;
-	font-size: 20px;
+	font-size: 1rem;
 	line-height: 100%;
 
 	text-align: center;
@@ -179,20 +208,20 @@
 }
 
 .fullRight {
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 	display: flex;
 	width: calc(100% - var(--width-fullLeft));
 	height: 100%;
-	/* background-image: url("../../../assets/images/bgimagehighres.png"); */
-	background: rgb(6, 62, 92);
-	background: linear-gradient(90deg, #3796b0 0%, #000851 100%);
+	background-image: url("../../../assets/images/bgimagehighres.png");
+	/* background-color: #E7ECEF;
+	background: linear-gradient(90deg, #3796b0 0%, #000851 100%); */
 	/* background: linear-gradient(
 		300deg,
 		rgba(6, 62, 92, 1) 0%,
 		rgb(13, 74, 109) 50%,
 		rgba(3, 153, 223, 1) 95%
 	); */
-	background-size: 100%;
+	background-size: cover;
 	box-shadow: -62px 0px 39px -10px rgba(0, 0, 0, 0.2);
 	border-radius: 2rem 0px 0px 2rem;
 	justify-content: center;
@@ -235,8 +264,14 @@
 	.fullscreenFrame{
 		background-color: white;
 	}
+
+	.usernameInputField ,.passwordInputField {
+		border: 1px;
+		
+	}
 	
 }
+
 
 @media all and (min-width: 768px) and (max-width: 1100px) {
 	.logotext {
@@ -312,10 +347,7 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		align-items: center;
-		padding: 0px;
-
-		width: 75%;
-		height: 45%;
+		width: 100%;
 		flex: none;
 		order: 0;
 		flex-grow: 0;
@@ -347,7 +379,11 @@
 	}
 
 	.text1 {
-		font-size: x-large;
+		font-size: large;
+	}
+
+	.text2 {
+		font-size: 0.9rem;
 	}
 
 	.fullRight {
@@ -362,12 +398,14 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		align-items: center;
-		padding: 0px;
 		width: 100%;
-		height: 45%;
 		flex: none;
 		order: 0;
 		flex-grow: 0;
+	}
+
+	.formContainer >input {
+		font-size: 0.8rem;
 	}
 
 	.loginPrompt {
@@ -384,9 +422,11 @@
 		flex-grow: 0;
 	}
 
+	.signinFlexBox > text {
+		font-size: 0.9rem;
+	}
+
 	.logoImg > img {
-		width: 8rem;
+		width: 5rem;
 	}
 }
-
-
