--- a/src/pages/Auth/Patient/RegisterPatient.module.css
+++ b/src/pages/Auth/Patient/RegisterPatient.module.css
@@ -21,7 +21,7 @@
 	/* identical to box height, or 58px */
 	z-index: 100;
 	color: #051923;
-	transition: all 2s;
+	transition: all cubic-bezier(0.075, 0.82, 0.165, 1) .2s;
 }
 
 .logotext:hover {
