--- a/src/components/Buttons/ButtonDark.module.css
+++ b/src/components/Buttons/ButtonDark.module.css
@@ -5,12 +5,28 @@
 	font-family: 'Rubik', sans-serif;
 	color: #ffffff;
 	font-size: 1rem;
-	padding: 0.9rem;
+	padding: 0.75rem;
 	margin: 0.3rem;
 	text-decoration: none;
   }
+
+  .btnSmall {
+	background: #000000;
+
+	border-radius: 1.8125rem;
+	font-family: 'Rubik', sans-serif;
+	color: #ffffff;
+	font-size: 0.5rem;
+	padding: 0.1rem;
+	margin: 0.1rem;
+  }
   
   .btn:hover {
+	background: #3f3f3f;
+	text-decoration: none;
+  }
+
+  .btnSmall:hover {
 	background: #3f3f3f;
 	text-decoration: none;
   }
