--- a/src/components/Buttons/ButtonDark.module.css
+++ b/src/components/Buttons/ButtonDark.module.css
@@ -1,32 +1,13 @@
-.btn {
-	background: #000000;
-
-	border-radius: 1.8125rem;
-	font-family: 'Rubik', sans-serif;
-	color: #ffffff;
-	font-size: 1rem;
-	padding: 0.75rem;
-	margin: 0.3rem;
-	text-decoration: none;
-  }
-
-  .btnSmall {
-	background: #000000;
-
-	border-radius: 1.8125rem;
-	font-family: 'Rubik', sans-serif;
-	color: #ffffff;
-	font-size: 0.5rem;
-	padding: 0.1rem;
-	margin: 0.1rem;
+.blackButton {
+	background-color: black;
+	color: white;
+	border: none;
+	padding: 0.5rem 1rem;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
   }
   
-  .btn:hover {
-	background: #3f3f3f;
-	text-decoration: none;
-  }
-
-  .btnSmall:hover {
-	background: #3f3f3f;
-	text-decoration: none;
+  .blackButton:hover {
+	background-color: rgb(42, 42, 42);
   }
