--- a/src/components/Buttons/ButtonLight.module.css
+++ b/src/components/Buttons/ButtonLight.module.css
@@ -1,19 +1,15 @@
-.btn {
-	background-color: #ffffff;
-	
-	-webkit-border-radius: 29;
-	-moz-border-radius: 29;
-	border-radius: 1.8125rem;
-	font-family: 'Rubik', sans-serif;
-	color: #000000;
-	font-size: 1rem;
-	padding: 0.9rem;
-	margin: 0.3rem;
-	text-decoration: none;
+.lightButton {
+	background-color: white;
+	color: black;
+	border: 1px solid transparent;
+	padding: 0.5rem 1rem;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: background-color 0.3s ease, border-color 0.3s ease;
   }
   
-  .btn:hover {
-	background: #d4d4d4;
-	
-	text-decoration: none;
+  .lightButton:hover {
+	background-color: #f2f2f2;
+	border-color: #e0e0e0;
   }
+  
