--- a/src/pages/Auth/Doctor/RegisterDoc.module.css
+++ b/src/pages/Auth/Doctor/RegisterDoc.module.css
@@ -202,7 +202,7 @@
 	border-radius: 0.4rem;
 }
 
-.dobSexFlexBox {
+.degSpecialtyFlexBox {
 	box-sizing: border-box;
 	padding: 0.3rem 0 0.3rem 0;
 	display: flex;
@@ -212,22 +212,39 @@
 	width: 100%;
 }
 
-.dobSexFlexBox input,
-select {
+.degSpecialtyFlexBox input input{
 	border: none;
 	padding: 0.3rem;
 	border-radius: 0.4rem;
-	width: 45%;
+	width: 100%;
 }
 
 select:required:invalid {
-  color: gray;
+	color: gray;
+  }
+  option[value=""][disabled] {
+	display: none;
+  }
+  option {
+	  color: black;
+  }
+
+.expAddressFlexBox {
+	box-sizing: border-box;
+	padding: 0 0 0.3rem 0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
 }
-option[value=""][disabled] {
-  display: none;
-}
-option {
-	color: black;
+
+.expAddressFlexBox input,
+input {
+	border: none;
+	padding: 0.3rem;
+	border-radius: 0.4rem;
+	width: 47%;
 }
 
 .pwdField {
@@ -235,6 +252,7 @@ option {
 	border: none;
 	padding: 0.3rem;
 	border-radius: 0.4rem;
+	width: 100%;
 }
 
 .signUpFlexBox {
