--- a/src/components/Buttons/ButtonHollow.module.css
+++ b/src/components/Buttons/ButtonHollow.module.css
@@ -1,4 +1,6 @@
-.basicButton-primary {
+.basicButtonprimary {
+	min-width: max-content;
+	width: 100%;
 	background-color: transparent;
 	opacity: 1;
 	color: black;
@@ -12,14 +14,14 @@
 	
   }
   
-  .basicButton-primary:hover {
+  .basicButtonprimary:hover {
 	border: 1px solid rgba(0, 0, 0, 1);
 	/* background-color: rgb(0, 0, 0);
 	/* color: white; */
 	/* border: 1px solid grey; */
   }
 
-  .basicButton-white {
+  .basicButtonwhite {
 	background-color: transparent;
 	opacity: 1;
 	color: black;
@@ -29,13 +31,11 @@
 	cursor: pointer;
 	transition: 0.2s ease;
 	box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.5) inset;
-	border: "1px solid white",
-	
-	
-	
+	border: "1px solid white";
+	min-width: max-content;
   }
   
-  .basicButton-white:hover {
+  .basicButtonwhite:hover {
 	border: 1px solid rgba(0, 0, 0, 1);
 	/* background-color: rgb(0, 0, 0);
 	/* color: white; */
