--- a/src/pages/Auth/Login/Login.module.css
+++ b/src/pages/Auth/Login/Login.module.css
@@ -166,6 +166,7 @@
 }
 
 .formContainer > input {
+	box-sizing: border-box;
 	border: none;
 	margin-top: 0.6rem;
 	margin-bottom: 0.6rem;
@@ -173,6 +174,7 @@
 	border-radius: 0.4rem;
 	height: 100%;
 	text-align: center;
+	width: 100%;
 }
 
 .signinFlexBox {
