--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -93,7 +93,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: flex-end;
 }
 
 .mainLeftThird {
