--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -10,9 +10,6 @@
 	align-items: center;
 	justify-content: space-between;
 	border: 1% solid black;
-	/* margin-top: 1%;
-	margin-left: 1%;
-	margin-right: 1%; */
 	padding: 1%;
 	height: 100vh;
 }
@@ -24,7 +21,6 @@
 	flex-basis: auto;
 	align-items: center;
 	justify-content: space-between;
-	/* margin: 10px; */
 	padding: 10px;
 }
 
@@ -41,18 +37,9 @@
 	flex-basis: 60%;
 }
 
-/* .link {
-	background-color: black;
-	width: 10%;
-	height: 10%;
-} */
 
 .section {
 	background-image: url('../../assets/images/bgimage.png');
-	/* gap: 16px; */
-	/* margin-top:auto;
-	margin-left: auto;
-	margin-right: auto;	 */
 	border-radius: 20px;
 	display: flex;
 	width: 100%;
@@ -96,7 +83,7 @@
 }
 
 .mainLeftThird {
-	/* line-height:1; */
+
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -110,7 +97,25 @@
 	justify-content: space-around;
 	width: 50%;
 	padding: 2%;
-	/* margin-bottom: 5%; */
 }
+
+/* TODO: Make the webpage responsive */
+
+/* width of screen between 0px to 480px */
+@media all and (max-width: 480px) {
+	
+}
+
+/* width of screen between 480px to 768px */
+@media all and (min-width: 480px) and (max-width: 768px){
+	
+}
+
+/* width of screen between 768px to 1100px */
+@media all and (min-width: 768px) and (max-width: 1100px) {
+	
+}
+
+
 
 
