--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -93,10 +93,12 @@
 .mainDown {
 	display: flex;
 	flex-direction: row;
-	align-items: flex-start;
+	align-items: center;
 	justify-content: space-around;
 	width: 50%;
 	padding: 2%;
+	flex: 0.3;
+
 }
 
 /* TODO: Make the webpage responsive */
