--- a/src/components/Buttons/WhiteButton.module.css
+++ b/src/components/Buttons/WhiteButton.module.css
@@ -19,6 +19,6 @@
 }
 
 .btn:hover {
-  box-shadow: 0 8px 22px 0 rgb(37 44 97 / 15%),
-    0 4px 6px 0 rgb(93 100 148 / 20%);
+  box-shadow: 0 8px 22px 0 rgba(0, 0, 0, 0.15),
+    0 4px 6px 0 rgba(0, 0, 0, 0.2);
 }
