--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -68,6 +68,20 @@
 	flex: 1;
 }
 
+.text1{
+	color:white;
+	font-size: 3.75rem;
+	margin:0; 
+	padding: 15px;
+}
+
+.text2 {
+	color:black;
+	font-size: 3.75rem;
+	margin:0; 
+	padding: 15px;
+}
+
 .mainLeft {
 	display: flex;
 	flex-direction: column;
@@ -91,6 +105,10 @@
 	justify-content: space-between;
 }
 
+.mainRight > img {
+	height: 350px;
+}
+
 .mainDown {
 	display: flex;
 	flex-direction: row;
@@ -106,17 +124,63 @@
 
 /* width of screen between 0px to 480px */
 @media all and (max-width: 480px) {
-	
+
+	.navbar {
+		flex-direction: column;
+	}
+
+	.navbar * {
+		margin: 10px;
+	}
+
+	.section {
+		align-items: center;
+	}
+
+	.text1, .text2 {
+		font-size: 2em;
+	}
+
+	.mainLeftThird > img {
+		height: 40px;
+	}
+
+	.main {
+		width: 100vw;
+		flex-direction: column-reverse;
+	}
+	.mainRight > img {
+		height: 150px;
+	}
+
+	.mainDown {
+		flex-direction: column;
+	}
+
+	.mainDown * {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
 }
 
 /* width of screen between 480px to 768px */
 @media all and (min-width: 480px) and (max-width: 768px){
-	
+	.section {
+		align-items: center;
+	}
+
+
+	.main {
+		width: 100vw;
+		flex-direction: column-reverse;
+	}
 }
 
 /* width of screen between 768px to 1100px */
 @media all and (min-width: 768px) and (max-width: 1100px) {
-	
+	.mainRight > img {
+		height: 250px;
+	}
 }
 
 
