fixed console issues and routes from home page

--- a/src/components/Buttons/ButtonLight.module.css
+++ b/src/components/Buttons/ButtonLight.module.css
@@ -9,7 +9,7 @@
   }
   
   .lightButton:hover {
-	background-color: #f2f2f2;
-	border-color: #e0e0e0;
+	background-color: #a7a7a7;
+	border-color: #a7a7a7;
   }
   
