--- a/src/pages/Auth/Patient/RegisterPatient.module.css
+++ b/src/pages/Auth/Patient/RegisterPatient.module.css
@@ -147,8 +147,14 @@
 .pfpBox > img {
 	width: 80px;
 	height: 80px;
+	border-radius: 50%;
+	object-fit: cover;
 }
-
+.uploadProfilePic{
+	background-color: black;
+    color: white;
+    /* opacity: 0; */
+}
 /* .usernameInputField ,.passwordInputField {
 	border: none;
 	border-radius: 100px;
